apps/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  annotations:
    kube-score/ignore: pod-networkpolicy, pod-probes, container-image-tag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      containers:
        - name: gatus
          image: ghcr.io/twin/gatus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config/config.yaml
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
              ephemeral-storage: 1Gi
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config-volume
          configMap:
            name: gatus-config
