apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None
  selector:
    app: gatus
